change file encoding to utf-8

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-animalEstimacao=gato
+#animalEstimacao=gato
 
 ## H2
+
 
 #spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.url=jdbc:h2:file:~/aloldw21;AUTO_SERVER=true;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1;
@@ -8,7 +9,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=pass
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
+
 
 
 ## hsqldb
@@ -24,11 +25,11 @@ spring.jpa.show-sql=true
 #spring.datasource.password=postgrespass
 #spring.datasource.initialization-mode=always
 
-#A cada startup, o banco de dados é deletado e criado novamente
+#A cada startup, o banco de dados eh deletado e criado novamente
 spring.jpa.hibernate.ddl-auto=create
-#A cada startup, o banco de dados é deletado e criado novamente, e no shutdown, a base também é deletada
+#A cada startup, o banco de dados eh deletado e criado novamente, e no shutdown, a base tambehm eh deletada
 #spring.jpa.hibernate.ddl-auto=create-drop
-#A cada startup, o banco de dados é atualizado
+#A cada startup, o banco de dados eh atualizado
 #spring.jpa.hibernate.ddl-auto=update
-#A cada startup, o schema do banco é comparado com as entidades. Se não houver correspondencia, o startup é interrompido
+#A cada startup, o schema do banco eh comparado com as entidades. Se nao houver correspondencia, o startup eh interrompido
 #spring.jpa.hibernate.ddl-auto=validated
