oferecer api de posts similar ao jsonplaceholder

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 #animalEstimacao=gato
 
+spring.jpa.show-sql=true
+
+
 ## H2
 
 
@@ -32,4 +35,6 @@ spring.jpa.hibernate.ddl-auto=create
 #A cada startup, o banco de dados eh atualizado
 #spring.jpa.hibernate.ddl-auto=update
 #A cada startup, o schema do banco eh comparado com as entidades. Se nao houver correspondencia, o startup eh interrompido
-#spring.jpa.hibernate.ddl-auto=validated
+#spring.jpa.hibernate.ddl-auto=validate
+# faz nada
+#spring.jpa.hibernate.ddl-auto=none
